--- a/pre-workshop/software-install.qmd
+++ b/pre-workshop/software-install.qmd
@@ -95,12 +95,14 @@ On a command line, Git commands are written as `git verb options`, where `verb` 
 
 #### Set user.name & user.email
 
-In our workshop, we will be interacting with [GitHub](https://github.com/) and so our configured email address should be the same as the one used when setting up your GitHub account. Most likely this will be your government email.
+In this workshop, we'll be working with [GitHub](https://github.com/), and it's important to ensure that the name and email address you configure on your local computer matches the one associated with your GitHub account. For most participants, this will be your government email address.
 
-Below is an example configuration, please type in the commands using your name and email address. For Windows users, these will be typed into a `Git Bash` terminal (search for `Git Bash` from the search bar to create a new window). For Mac users, these will be typed into the `Terminal`.
+Below is an example configuration that we will use to connect your local git instance with GitHub. 
+
+For Windows users, these will be typed into a `Git Bash` terminal (search for `Git Bash` from the search bar to open a new window). For Mac users, these will be typed into the `Terminal`.
 
 ``` bash
-$ git config --global user.name "Your Name in Quotes"
+$ git config --global user.name "your GitHub account name" 
 $ git config --global user.email "your_email@gmail.com"
 ```
 
@@ -108,9 +110,9 @@ If you are concerned about privacy, please review [GitHub's instructions for kee
 
 #### Global Settings
 
-The two commands we just ran above only need to be run once: the flag `--global` tells Git to use the settings for every project, in your user account, on this computer.
+The two commands we just ran only need to be run once. The flag `--global` tells Git to use the settings for every project on this computer.
 
-You can check your settings at any time:
+You can check your settings at any time with:
 
 ``` bash
 $ git config --list
@@ -120,14 +122,14 @@ You can change your configuration as many times as you want: use the same comman
 
 #### Git Help and Manual
 
-Always remember that if you forget a `git` command, you can access the list of commands by using `-h` and access the Git manual by using `--help` :
+If you forget a `git` command, you can access a list of available commands by appending a `-h`. You can access the Git manual for a command by appending `--help` :
 
 ``` bash
 $ git config -h
 $ git config --help
 ```
 
-While viewing the manual, remember the `:` is a prompt waiting for commands and you can press <kbd>Q</kbd> to exit the manual.
+While viewing the manual, you may see `:` near the cursor at the bottom of the screen.  This is a prompt waiting for further commands such as <kbd>Q</kbd>, which you can use to exit the manual.
 
 ## Additional Resources
 
